# tkclaw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  dev.sh  docker-compose-deploy.yml  docker-compose-test.yml  docker-compose.ee.yml  docker-compose.yml  docker-push.sh  features.yaml
nodeskclaw-backend/: .env.example  Dockerfile  README.md  pyproject.toml
nodeskclaw-backend/alembic/: env.py
nodeskclaw-backend/alembic/versions/: 4d2b9a8e1f77_merge_workspace_task_archive_head.py  68c9c4eb557f_merge_floor_number_and_llm_overrides.py  7c6a5b4d3e2f_add_floor_number_to_blackboard_replies.py  9f3c2d1a4b7e_add_trace_meta_to_workspace_messages.py  a1b2c3d4e5f6_storage_class_nullable.py  b7d2e9f31a04_rename_tos_key_to_storage_key.py  bbd8065a731d_合并多_head_迁移链.py  c3d8f952a6ea_add_archived_from_status_to_workspace_.py  d260326a1bcd_add_default_instance_id_to_org_memberships.py  d8a3f1c72b05_create_instance_llm_overrides_table.py  (+2 more)
nodeskclaw-backend/app/: main.py
nodeskclaw-backend/flyway/: 20260325_add_department_memberships_table.sql  20260325_add_departments_table.sql  20260325_add_workspace_departments_table.sql  20260325_alter_workspaces_add_department_scope.sql  20260326_add_wecom_bind_sessions_table.sql  20260326_alter_org_memberships_add_default_instance_id.sql
nodeskclaw-backend/tests/: test_alembic_url.py  test_auth_oauth_login.py  test_blackboard_mentions.py  test_blackboard_reply_floor.py  test_blackboard_task_pagination.py  test_codex_config_defaults.py  test_docker_provider_paths.py  test_gene_callback_signature.py  test_instance_health_checker_wecom_auto_install.py  test_llm_config_service.py  test_openclaw_session_clear.py  test_org_member_soft_delete.py  test_retention_queue_soft_delete.py  test_runtime_messaging_offline.py  test_storage_cluster_scope.py  test_tunnel_context_prompt.py  test_wecom_oauth_provider.py  test_workspace_agent_node_card_sync.py  test_workspace_default_schedule.py  test_workspace_message_search.py
zeroclaw-security-layer/: .gitignore  Cargo.toml  README.md
zeroclaw-security-layer/examples/: test_runtime.rs
zeroclaw-security-layer/src/: ws_client.rs
(+465 files in other folders)
